added email and contact number regex for user input